--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
   <body>
     <h1>Hello Git</h1>
 
+    <form>
+      <input type="text" placeholder="Enter your email" />
+      <input type="password" placeholder="Enter your password" />
+      <input type="submit" value="Login" />
+    </form>
+
     <script src="src/script.js"></script>
   </body>
 </html>
