Insert img and centered

--- a/index.html
+++ b/index.html
@@ -4,12 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>GitHub Example</title>
     <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
-    <h1>Hello Git</h1>
+    <h1>Hello GitHub</h1>
 
+    <img
+      src="https://i.ytimg.com/vi/0nqJKEh3YCc/maxresdefault.jpg"
+      alt="Git Push Pull Commands"
+      width="400"
+    />
+    <br />
+    <br />
     <form>
       <input type="text" placeholder="Enter your email" />
       <input type="password" placeholder="Enter your password" />
