--- a/index.html
+++ b/index.html
@@ -114,6 +114,12 @@
           </div>
         </div>
       </div>
+      <span>
+        <a href="https://github.com/kflower7/weather-app" target="_blank"
+          >Open-source code</a
+        >
+        by Kylee Flores</span
+      >
     </div>
     <script src="src/script.js"></script>
   </body>
